Try to fix header on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -545,6 +545,7 @@ span.workshop__left__title {
 
     header {
         min-height: 150px;
+        position: absolute;
     }
     main {
         margin-top: 150px;
